--- a/package.json
+++ b/package.json
@@ -16,6 +16,6 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com//ar-button"
+    "url": "https://github.com/Wonder-Partners/ar-button"
   }
 }
