--- a/.gitignore
+++ b/.gitignore
@@ -103,6 +103,7 @@ dist
 # vuepress v2.x temp and cache directory
 .temp
 .cache
+**/.vscode
 
 # Docusaurus cache and generated files
 .docusaurus
@@ -128,3 +129,7 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+# User local config
+fiveserver.config.js
+examples/
