--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@wonder-partners/ar-button",
   "version": "1.0.0-preview.1",
   "description": "A web component to easily display 3D models in native AR across browsers and mobile devices",
-  "main": "index.js",
+  "main": "main.js",
   "author": "Wonder Partners (https://wonder-partners.com)",
   "license": "GPL-3.0",
   "keywords": [
