--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wonder-partners/ar-button",
-  "version": "1.0.0",
+  "version": "1.0.0-preview.1",
   "description": "A web component to easily display 3D models in native AR across browsers and mobile devices",
   "main": "main.js",
   "author": "Wonder Partners (https://wonder-partners.com)",
@@ -19,6 +19,8 @@
     "url": "https://github.com/Wonder-Partners/ar-button"
   },
   "scripts": {
-    "min": "terser main.js -o main.min.js -c --module -m"
+    "min": "terser main.js -o main.min.js -c --module -m",
+    "dev": "five-server",
+    "publish": "npm run min && npm publish"
   }
 }
