--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "scripts": {
     "min": "terser main.js -o main.min.js -c --module -m",
     "dev": "five-server",
-    "publish": "npm run min && npm publish",
-    "pack": "npm run min && npm pack"
+    "publish": "terser main.js -o main.min.js -c --module -m && npm publish",
+    "pack": "terser main.js -o main.min.js -c --module -m && npm pack"
   }
 }
